--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,8 @@
 ---
 import Layout from '../layouts/Layout.astro';
+import IntroSection from '../components/IntroSection.astro';
 ---
 
 <Layout>
-  <h1>Hello world</h1>
+  <IntroSection />
 </Layout>
