--- a/src/components/IntroSection.astro
+++ b/src/components/IntroSection.astro
@@ -6,18 +6,20 @@ import photo from '../assets/photo.png';
 <section class='sm:pt-16 sm:max-w-[--max-width] sm:mx-auto'>
   <div class='px-8 sm:grid grid-cols-2 gap-4'>
     <div
-      class='bg-[--clr-primary-03] p-8 sm:px-12 lg:px-20 [&>*]:mb-4 mb-4 rounded sm:mb-0 sm:h-[92%]'
+      class='bg-[--clr-primary-03] p-8 sm:px-12 lg:px-20 lg:py-16 [&>*]:mb-8 mb-4 rounded sm:mb-0 sm:h-[92%]'
     >
-      <h1 class='text-[--clr-accent-01] font-bold text-2xl sm:text-3xl'>
+      <h1
+        class='text-[--clr-accent-01] font-bold text-2xl sm:text-3xl lg:text-[2.7rem]'
+      >
         Your Name
       </h1>
       <h2
-        class='text-[--clr-primary-02] font-bold text-5xl sm:text-6xl md:text-[5rem] xl:text-8xl'
+        class='text-[--clr-primary-02] font-bold text-5xl sm:text-6xl md:text-[5rem] xl:text-9xl '
       >
         Media Kit
       </h2>
       <p
-        class='text-[--clr-primary-02] text-sm md:text-base md:w-4/5 lg:text-lg'
+        class='text-[--clr-primary-02] text-sm md:text-base md:w-4/5 lg:text-xl'
       >
         Write something about yourself here. Keep it short, simple and include a
         bit of your personality!
