Adjust margins for text

--- a/src/components/IntroSection.astro
+++ b/src/components/IntroSection.astro
@@ -6,7 +6,7 @@ import photo from '../assets/photo.png';
 <section class='sm:pt-16 sm:max-w-[--max-width] sm:mx-auto'>
   <div class='px-8 sm:grid grid-cols-2 gap-4'>
     <div
-      class='bg-[--clr-primary-03] p-8 sm:px-12 lg:px-20 lg:py-16 [&>*]:mb-8 mb-4 rounded sm:mb-0 sm:h-[92%]'
+      class='bg-[--clr-primary-03] p-8 sm:px-12 lg:px-20 lg:py-16 [&>*]:mb-4 lg:[&>*]:mb-8 mb-4 rounded sm:mb-0 sm:h-[92%]'
     >
       <h1
         class='text-[--clr-accent-01] font-bold text-2xl sm:text-3xl lg:text-[2.7rem]'
