--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,4 @@
+@import '@fontsource-variable/inter';
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -15,6 +16,14 @@
   --clr-accent-05: rgba(249, 176, 145, 1);
 
   --max-width: 1240px;
+}
+
+@layer base {
+  h1,
+  h2,
+  p {
+    @apply font-inter;
+  }
 }
 
 @layer components {
