Add OverviewSection to page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,10 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import IntroSection from '../components/IntroSection.astro';
+import OverviewSection from '../components/OverviewSection.astro';
 ---
 
 <Layout>
   <IntroSection />
+  <OverviewSection />
 </Layout>
