--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,9 +2,11 @@
 import Layout from '../layouts/Layout.astro';
 import IntroSection from '../components/IntroSection.astro';
 import OverviewSection from '../components/OverviewSection.astro';
+import AudienceSection from '../components/AudienceSection.astro';
 ---
 
 <Layout>
   <IntroSection />
   <OverviewSection />
+  <AudienceSection />
 </Layout>
