Add Highlight Section to page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,10 +3,12 @@ import Layout from '../layouts/Layout.astro';
 import IntroSection from '../components/IntroSection.astro';
 import OverviewSection from '../components/OverviewSection.astro';
 import AudienceSection from '../components/AudienceSection.astro';
+import HighlightSection from '../components/HighlightSection.astro';
 ---
 
 <Layout>
   <IntroSection />
   <OverviewSection />
   <AudienceSection />
+  <HighlightSection />
 </Layout>
