--- a/src/components/HighlightSection.astro
+++ b/src/components/HighlightSection.astro
@@ -4,7 +4,7 @@ import Envelop from '../assets/Envelope.png';
 ---
 
 <section class='sm:max-w-[--max-width] sm:mx-auto'>
-  <div class='px-8 flex flex-col gap-4 lg:flex-row'>
+  <div class='px-8 flex flex-col gap-4 lg:flex-row lg:gap-8'>
     <div>
       <h2
         class='text-[--clr-primary-02] font-bold text-5xl md:text-[5.5rem] text-center md:text-left mb-8'
