Add bottom margin to section

--- a/src/components/HighlightSection.astro
+++ b/src/components/HighlightSection.astro
@@ -3,7 +3,7 @@ import { Image } from 'astro:assets';
 import Envelop from '../assets/Envelope.png';
 ---
 
-<section class='sm:max-w-[--max-width] sm:mx-auto'>
+<section class='sm:max-w-[--max-width] sm:mx-auto mb-24'>
   <div class='px-8 flex flex-col gap-4 lg:flex-row lg:gap-8'>
     <div>
       <h2
