--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,6 +8,7 @@
   --clr-primary-01: rgba(255, 255, 255, 1);
   --clr-primary-02: rgba(25, 25, 25, 1);
   --clr-primary-03: rgba(25, 25, 25, 0.05);
+  --clr-primary-04: rgba(255, 255, 255, 0.05);
 
   --clr-accent-01: rgba(191, 145, 249, 1);
   --clr-accent-02: rgba(151, 237, 170, 1);
