Add styling for dark theme
Add various classes and color changes for page elements when dark theme has been chosen as user's preferred theme

--- a/src/components/OverviewSection.astro
+++ b/src/components/OverviewSection.astro
@@ -15,14 +15,22 @@ import Youtube from '../assets/socials/YouTube.png';
     </h2>
     <div class='flex flex-col md:flex-row gap-4 md:flex-shrink'>
       <div
-        class='bg-[--clr-accent-01] px-6 py-20 md:px-0 container-round flex flex-col items-center justify-center'
+        class='bg-[--clr-accent-01] dark:bg-[--clr-accent-04] px-6 py-20 md:px-0 container-round flex flex-col items-center justify-center'
       >
-        <h2 class='text-[--clr-primary-01] font-bold text-8xl text-ellipsis'>240K</h2>
-        <p class='text-[--clr-primary-01] font-bold w-3/4 mx-auto'>
+        <h2
+          class='text-[--clr-primary-01] dark:text-[--clr-primary-02] font-bold text-8xl text-ellipsis'
+        >
+          240K
+        </h2>
+        <p
+          class='text-[--clr-primary-01] dark:text-[--clr-primary-02] font-bold w-3/4 mx-auto'
+        >
           Total Reach Across All Media & Platforms
         </p>
       </div>
-      <div class='pt-10 container-round bg-[--clr-primary-03] sm:flex sm:justify-center md:flex-grow md:px-6 lg:px-10'>
+      <div
+        class='pt-10 container-round bg-[--clr-primary-03] dark:bg-[--clr-primary-04] sm:flex sm:justify-center md:flex-grow md:px-6 lg:px-10'
+      >
         <div
           class='grid justify-center gap-2 sm:gap-10 sm:grid-cols-2 md:flex-grow lg:grid-rows-2 lg:grid-cols-3 lg:gap-4'
         >
