--- a/src/components/SocialMedia.astro
+++ b/src/components/SocialMedia.astro
@@ -21,6 +21,6 @@ const { image, alt, fanNumbers, url, fanType } = Astro.props;
     </div>
   </div>
   <div>
-    <a href='/' class='text-[--clr-accent-01] hover:underline'>{url}</a>
+    <a href='/' class='text-[--clr-accent-01] dark:text-[--clr-accent-02] hover:underline'>{url}</a>
   </div>
 </div>
