--- a/src/components/HighlightSection.astro
+++ b/src/components/HighlightSection.astro
@@ -7,7 +7,7 @@ import Envelop from '../assets/Envelope.png';
   <div class='px-8 flex flex-col gap-4 lg:flex-row lg:gap-8'>
     <div>
       <h2
-        class='text-[--clr-primary-02] font-bold text-5xl md:text-[4.5rem] text-center md:text-left mb-8'
+        class='font-bold text-5xl md:text-[4.5rem] text-center md:text-left mb-8'
       >
         Past Highlights
       </h2>
@@ -15,7 +15,7 @@ import Envelop from '../assets/Envelope.png';
         class='flex flex-col gap-4 text-center lg:flex-row lg:justify-between'
       >
         <div
-          class='container-round bg-[--clr-primary-03] py-4 lg:py-6 lg:px-8 lg:flex-grow'
+          class='container-round bg-[--clr-primary-03] py-4 lg:py-6 lg:px-8 lg:flex-grow dark:bg-[--clr-primary-04]'
         >
           <p class='font-bold'>Nerd or Die</p>
           <span>↓</span>
@@ -25,7 +25,7 @@ import Envelop from '../assets/Envelope.png';
           <p class='text-[--clr-accent-02] font-bold'>2,000 Conversions</p>
         </div>
         <div
-          class='container-round bg-[--clr-primary-03] py-4 lg:py-6 lg:px-8 lg:flex-grow'
+          class='container-round bg-[--clr-primary-03] py-4 lg:py-6 lg:px-8 lg:flex-grow dark:bg-[--clr-primary-04]'
         >
           <p class='font-bold'>Mouse Accuracy</p>
           <span>↓</span>
@@ -35,7 +35,7 @@ import Envelop from '../assets/Envelope.png';
           <p class='text-[--clr-accent-02] font-bold'>2,000 New Users</p>
         </div>
         <div
-          class='container-round bg-[--clr-primary-03] py-4 lg:py-6 lg:px-8 lg:flex-grow'
+          class='container-round bg-[--clr-primary-03] py-4 lg:py-6 lg:px-8 lg:flex-grow dark:bg-[--clr-primary-04]'
         >
           <p class='font-bold'>Stream Hardware Co.</p>
           <span>↓</span>
@@ -47,14 +47,18 @@ import Envelop from '../assets/Envelope.png';
       </div>
     </div>
     <div
-      class='bg-[--clr-accent-04] py-20 flex flex-col justify-center items-center text-center container-round lg:flex-grow'
+      class='bg-[--clr-accent-04] py-20 flex flex-col justify-center items-center text-center container-round lg:flex-grow dark:bg-[--clr-accent-01]'
     >
       <h3 class='font-bold text-4xl lg:text-5xl mb-4'>Let’s Talk</h3>
       <button
-        class='flex items-center gap-6 bg-[--clr-accent-01] font-bold text-[--clr-primary-01] rounded-xl w-fit px-6 xl:px-10 py-4 hover:brightness-90 active:scale-95'
+        class='flex items-center gap-6 bg-[--clr-accent-01] font-bold text-[--clr-primary-01] rounded-xl w-fit px-6 xl:px-10 py-4 hover:brightness-90 active:scale-95 dark:bg-[--clr-accent-04]'
       >
         <Image src={Envelop} alt={''} class='w-8' />
-        <p class='text-lg xl:text-xl'>your@email.com</p>
+        <p
+          class='text-lg xl:text-xl text-[--clr-primary-01] dark:text-[--clr-primary-02]'
+        >
+          your@email.com
+        </p>
       </button>
     </div>
   </div>
