Adjust spacing between span and text element

--- a/src/components/AudienceSection.astro
+++ b/src/components/AudienceSection.astro
@@ -11,9 +11,9 @@
     </h2>
     <div class='flex flex-col gap-4'>
       <div
-        class='grid sm:grid-cols-[100px_1fr] gap-4 w-full items-center font-bold'
+        class='grid sm:grid-cols-[100px_1fr] md:grid-cols-[170px_1fr] gap-4 w-full items-center font-bold'
       >
-        <h3>Gender ➜</h3>
+        <h3 class='md:text-xl'>Gender <span class='md:ml-8'>➜</span></h3>
         <div class='flex flex-grow'>
           <div
             class='border-l border-t border-b border-[--clr-accent-02] rounded-l-lg w-[65%] flex justify-center items-center text-center py-1 sm:py-2 dark:bg-[--clr-primary-04]'
@@ -28,9 +28,9 @@
         </div>
       </div>
       <div
-        class='grid sm:grid-cols-[100px_1fr] gap-4 w-full items-center font-bold'
+        class='grid sm:grid-cols-[100px_1fr] md:grid-cols-[170px_1fr] gap-4 w-full items-center font-bold'
       >
-        <h3>Age ➜</h3>
+        <h3 class='md:text-xl'>Age <span class='md:ml-8'>➜</span></h3>
         <div class='flex flex-grow'>
           <div
             class='border-l border-t border-b border-[--clr-accent-03] rounded-l-lg w-[55%] flex justify-center items-center text-center py-1 sm:py-2 dark:bg-[--clr-primary-04]'
@@ -55,9 +55,9 @@
         </div>
       </div>
       <div
-        class='grid sm:grid-cols-[100px_1fr] gap-4 w-full items-center font-bold'
+        class='grid sm:grid-cols-[100px_1fr] md:grid-cols-[170px_1fr] gap-4 w-full items-center font-bold'
       >
-        <h3>Interests ➜</h3>
+        <h3 class='md:text-xl'>Interests <span class='md:ml-8'>➜</span></h3>
         <div
           class='flex gap-2 items-center flex-wrap sm:flex-nowrap text-center'
         >
