Add missing bg for light theme

--- a/src/Layouts/Layout.astro
+++ b/src/Layouts/Layout.astro
@@ -12,7 +12,7 @@ import '../styles/globals.css';
   </head>
   <body class='bg-[--clr-primary-01] dark:bg-[--clr-primary-02] relative'>
     <span
-      class='absolute h-32 w-12 lg:w-[4.5rem] rounded-r-2xl dark:bg-[--clr-accent-04] left-0 top-16'
+      class='absolute h-32 w-12 lg:w-[4.5rem] rounded-r-2xl bg-[--clr-accent-01] dark:bg-[--clr-accent-04] left-0 top-16'
     ></span>
     <main>
       <slot />
